@@ -12,6 +12,7 @@
    - See the readme for current shortcuts and cmd line
  - Configs for J50, 2F Dock Tank and 3F Jinty by MeshTools
  - Config for GWR Small Prairies by VictoryWorks
+ - Configs for Cologne Koblenz locos
  - Damper axis removed, it made little sense
  - FireboxDoor, ExhaustSteam and LiveSteam axes (also for FEF-3)
 
